# drobot_inc

./: README.md
cube_bringup/: CMakeLists.txt  package.xml
cube_description/launch/: publish_urdf.launch.py  robot_description.launch.py
cube_description/urdf/: gazebo.xacro
cube_gazebo/: CMakeLists.txt  package.xml
cube_gazebo/launch/: spawn_robot_description.launch.py  start_world.launch.py
cube_gazebo/models/apriltag_block/: model.config  model.sdf
cube_gazebo/models/apriltag_block/meshes/: apriltag_36h11_7.dae
cube_gazebo/worlds/: drobot1.world
cube_navigation/: CMakeLists.txt  package.xml
cube_navigation/launch/: apriltag_navigation.launch.py
cube_navigation/scripts/: apriltag_detection.py
